--- a/html/ex01_header.html
+++ b/html/ex01_header.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>heading 1 tag</h1>
+    <h2>heading 1 tag</h2>
+    <h3>heading 1 tag</h3>
+    <h4>heading 1 tag</h4>
+    <h5>heading 1 tag</h5>
 </body>
 </html>
